refactor endpoint to /jobs
